--- a/escritos-volumen-1/updated/03-capitulo-2.adoc
+++ b/escritos-volumen-1/updated/03-capitulo-2.adoc
@@ -22,7 +22,7 @@ El día de su visitación pasa más rápido de lo que son conscientes.
 El clamor se ha extendido: ¡He aquí,
 el novio viene y su esposa ha sido preparada para su cama!
 Quítense las vestiduras viejas y pónganse las nuevas.
-Tengan el verdadero aceite en sus lámparas o la puerta del
+Tengan el verdadero aceite en sus lámparas, o la puerta del
 reino será cerrada sobre ustedes y no podrán entrar.
 En términos sencillos, sepárense de toda su religión,
 la que ustedes han obtenido en su propia sabiduría, la que ha crecido en la apostasía,^
@@ -39,7 +39,7 @@ de la verdadera justicia, de la verdadera inocencia y pureza de Cristo.
 Lo viejo debe ser eliminado, realmente eliminado, y lo nuevo debe ocupar su lugar.
 La carne y el yo deben ser absolutamente destruidos.
 Si van a entrar en Su reino,
-nada que no sea Cristo debe ser hallado en ustedes y ustedes
+nada que no sea Cristo debe ser hallado en ustedes, y ustedes
 no deben ser hallados en otro lugar que no sea Cristo,
 porque nada impuro puede entrar.
 
@@ -62,23 +62,23 @@ del Señor y en el oprobio de mi propia apostasía,
 y mi búsqueda de alivio del mundo (al haberme vuelto del Señor que me había herido,
 para buscar consuelo en las vanidades terrenales) no será fácilmente recobrado.
 
-El Señor fue bondadoso conmigo al quebrantarme en mi religión
+El Señor fue bondadoso conmigo al quebrantarme en mi religión,
 y visitarme con la dulce y preciosa luz de Su propio Espíritu,
 pero yo no la conocía. Tengo que reconocer que yo sentía Su poder
-sobre mí y que pude haberlo experimentado al permitirle que purificara
+sobre mí, y que pude haberlo reconocido si le hubiera permitido que purificara
 mi corazón y me engendrara a la imagen de Dios,
 pero demandé que ese poder apareciera mediante una
-demostración ante mi razón y mi sabiduría terrenal,
-y ante la falta de satisfacción, lo negué y me rebelé contra Él. En consecuencia,
-tras toda mi miseria anterior,
+demostración frente a mi razón y mi sabiduría terrenal,
+y ante la falta de satisfacción, lo negué y me rebelé contra Él. Y así,
+tras de toda mi miseria anterior,
 perdí mi entrada y sembré semillas de nueva miseria y tristeza para mi propia alma,
 las cuales he cosechado desde entonces.
 
 Así que ahora no tengo motivos para jactarme sobre otros,
 sino de tumbarme en humillación de espíritu.
 Lo que escribo no lo hago en mi propio poder y autoridad,
-sino para llevar a otros al poder y a la autoridad, a lo cual es bueno,
-tanto para mí como para otros, estar sujetos.
+sino para llevar a otros al poder y a la autoridad, a lo cual es bueno
+para mí como para otros, estar sujetos.
 ¡Quiera el Señor desnudarnos de nuestro propio entendimiento
 y de esa justicia nuestra (aunque la hemos llamado de Él),
 para que así nos reunamos y recibamos de Su entendimiento,
@@ -87,7 +87,7 @@ seamos vestidos con Su justicia y experimentemos Su reposo y paz!
 Feliz aquel que lo pierda todo para ganar esto,
 pero el que conserve lo que tiene por mucho tiempo, al final lo perderá todo.
 Por tanto,
-no sean más sabios a los ojos de la carne o de acuerdo a lo que el hombre llama sabiduría,
+ya no sean sabios a los ojos de la carne o de acuerdo a lo que el hombre llama sabiduría,
 sino sean _verdaderamente_ sabios.
 
 [.old-style.bold]
@@ -116,30 +116,31 @@ arraigados y cimentados en el que es verdadero,
 donde también estaban la posición y permanencia de ellos ("`estamos en el verdadero`"),
 y donde experimentaban el verdadero Espíritu, el verdadero Dios y la verdadera vida,
 es decir, la vida eterna.
-Que tenían el verdadero Espíritu de Dios ("`Y por cuanto sois hijos,
-Dios envió a vuestros corazones el Espíritu de su Hijo...`" Gal.
-4:6), que tenían la verdadera luz de Dios ("`Porque Dios,
-que mandó que de las tinieblas resplandeciese la luz,
-es el que resplandeció en nuestros corazones...`" 2 Cor.
-4:6), que tenían la verdadera vida del y en el Espíritu ("`Si vivimos por el Espíritu,
-andemos también por el Espíritu...`" Gal.
-5:25), es generalmente reconocido con respecto a ellos.
+Que tenían el verdadero Espíritu de Dios,
+según Gálatas, "`Y por cuanto sois hijos,
+Dios envió a vuestros corazones el Espíritu de su Hijo...`"
+(Gálatas 4:6); que tenían la verdadero luz de Dios,
+según 2 Corintios, "`Porque Dios, que mandó que de las tinieblas resplandeciese la luz,
+es el que resplandeció en nuestros corazones...`"
+(2 Corintios 4.6); que tenían la verdadera vida del Espíritu y en el Espíritu,
+según Gálatas, "`Si vivimos por el Espíritu, andemos también por el Espíritu...`"
+(Gálatas 5:25); es generalmente reconocido con respecto a ellos.
 
 Bien, las Escrituras hacen mención de una apostasía de esto,
 que incluso comenzó en los días de los apóstoles y se completó
 no mucho después. El apóstol Pablo dice expresamente de esto,
-que "`no vendrá sin que antes venga la apostasía, y se manifieste el hombre de pecado,
+"`no vendrá sin que antes venga la apostasía, y se manifieste el hombre de pecado,
 el hijo de perdición`" (2 Tes.
 2:3). Cristo había mostrado y declarado la senda de la vida,
-había revelado la verdadera iglesia como "`columna y sostén de la verdad,`" contra la
+había revelado la verdadera iglesia como "`columna y baluarte de la verdad,`" contra la
 cual las puertas del infierno no prevalecerían. Había enviado al verdadero Espíritu,
 el que podía "`llevar a toda verdad`" y preservar en la verdad.
-Pero leemos que debe surgir "`un hombre de pecado,
+Pero leemos en 2 Tesalonicenses, que antes debía surgir "`un hombre de pecado,
 un hijo de perdición,`" quien en misterio,
-debe obrar contra lo mostrado y declarado por Cristo
-y provocar un alejamiento de todo eso.
+obraría contra lo mostrado y declarado por Cristo,
+y provocaría un alejamiento de todo eso.
 El apóstol no sólo tocó esto por escrito aquí, también lo había dicho en persona,
-como lo refiere el versículo 5. Se pueden dar muchas más escrituras como evidencia.
+como lo refiere más adelante. Se pueden dar muchas más escrituras como evidencia.
 
 Cristo predijo los falsos profetas.
 Mateo 7:15 dice, "`Guardaos de los falsos profetas,
@@ -164,9 +165,9 @@ donde hay palabras de las Escrituras y prácticas,
 pero no el Espíritu de vida de donde proceden; ¡hay un falso profeta!, ¡hay un lobo!,
 ¡hay un apóstata!, ¡hay un engañador!
 
-De nuevo predijo acerca de muchos falsos profetas en Mateo 24:11,
+Cristo predijo de nuevo en Mateo 24:11 acerca de muchos falsos profetas,
 "`Y muchos falsos profetas se levantarán, y engañarán a muchos.`"
-Mateo 24:24, "`Porque se levantarán falsos Cristos, y falsos profetas,
+En Mateo 24:24 dice, "`Porque se levantarán falsos Cristos, y falsos profetas,
 y harán grandes señales y prodigios, de tal manera que engañarán, si fuere posible,
 aun a los escogidos.`"
 Y así como Cristo,
@@ -174,17 +175,16 @@ sus apóstoles después de Él y por el mismo Espíritu predijeron lo mismo.
 
 El apóstol Pablo habló de espíritus engañadores y doctrinas de demonios,
 que prevalecerían en los postreros tiempos para hacer que algunos apostataran de la fe.
-(1 Tim.
-4:1) Y si en aquellos días el poder de los engañadores
+(1 Tim. 4:1) Y si en aquellos días el poder de los engañadores
 era tan grande como para apartar de la fe,
 que en ese entonces era tan manifiesta y viva,
 cuán fácil sería después mantener lejos de la verdad,
 cuando la fe hacía tiempo se había perdido y sacado de la memoria, y por ello,
 el engaño había entrado en su lugar y tomado su nombre.
 
-El apóstol Pedro también predijo que "`habrá entre vosotros falsos maestros,
+El apóstol Pedro también predijo, "`habrá entre vosotros falsos maestros,
 que introducirán encubiertamente herejías destructoras,
-y aun negarán al Señor que los rescató`". Estos prevalecerían tanto que según Pedro,
+y aun negarán al Señor que los rescató`"; estos prevalecerían tanto que según Pedro,
 "`muchos seguirán sus disoluciones,
 por causa de los cuales el camino de la verdad será blasfemado`" (2 Ped.
 2:1-2).
@@ -200,14 +200,14 @@ blasfemos, desobedientes a los padres, ingratos, irreverentes, sin amor, implaca
 calumniadores, desenfrenados, salvajes, aborrecedores de lo bueno, traidores, impetuosos,
 envanecidos, amadores de los placeres en vez de amadores de Dios`" (2 Tim.
 3:1-4 NBLH).
-He aquí el tipo de fruto que surgió de la falsa doctrina
+He aquí, el tipo de fruto que surgió de la falsa doctrina
 de los falsos maestros en su apostasía de la verdad,
 y sin embargo, todo esto vino "`teniendo apariencia de piedad,
 pero habiendo negado su poder`" (ver. 5). Cristo envió el poder
 de la piedad al mundo para someter la raíz de donde todo esto surge,
 para matar interiormente la naturaleza maligna,
 pero en la apostasía la naturaleza del mal no es asesinada,
-porque se rechaza el poder que la mata y se conserva la forma externa
+porque se rechaza el poder que la mata, y se conserva la forma externa
 de religión para cubrir la naturaleza maligna dentro.
 
 Miren hacia cualquier lugar entre los líderes de la apostasía y vean:
@@ -230,7 +230,7 @@ Los últimos días y los últimos tiempos no estaban lejos, comenzaron en seguid
 porque el apóstol exhorta a Timoteo a volverse de tales hombres.
 "`...a éstos evita`" (2 Tim.
 3:5), implicando que incluso entonces ya estaban esos de los que había que volverse.
-Luego dice en el versículo 8 que ellos resisten la verdad,
+Más adelante dice que ellos resisten la verdad,
 como Jannes y Jambres se habían esforzado en resistir la vida y el poder que estaban
 en Moisés. Así que para el momento en que el apóstol le escribió esta carta a Timoteo,
 dichos hombres habían llegado.
@@ -244,11 +244,11 @@ así ahora han surgido muchos anticristos; por esto conocemos que es el último 
 Salieron de nosotros...`" (1 Juan 2:18-19). Cristo,
 instruyendo a Sus discípulos con respecto a los últimos tiempos,
 les dijo que se levantarían falsos cristos con gran poder de engaño. (Mat.
-24:24) Ahora bien, Juan dice aquí: "`han surgido muchos anticristos;
+24:24) Ahora bien, Juan dice: "`han surgido muchos anticristos;
 por esto conocemos que es el último tiempo.`"
 Estos no permanecieron en la doctrina de los apóstoles que predicaban "`el evangelio
 eterno,`" ni permanecieron en el Espíritu y principio en el que habían entrado,
-sino que "`salieron`" de ellos,
+sino que se "`salieron`" de ellos,
 salieron del Espíritu (de la unción en la que tenían que mantenerse y por la
 que eran mantenidos) hacia otro espíritu y predicaron otro evangelio.
 El evangelio del anticristo no era el poder de Dios para destruir lo terrenal,
@@ -257,11 +257,11 @@ del que lo terrenal podía alimentarse y mantenerse vivo.
 
 Miren el estado de las iglesias de entonces,
 según lo que las Escrituras registran de ellas,
-y los síntomas de la apostasía aparecerán claramente.
+y aparecerán claramente los síntomas de la apostasía.
 La iglesia de Éfeso (en la que habían entrado algunos lobos rapaces, Hech.
 20:29) había dejado su primer amor.
 (Apoc.
-2:4) Las iglesias de Galacia fueron hechizadas y se apartaron del evangelio.
+2:4) Las iglesias de Galacia habían sido hechizadas y se habían apartado del evangelio.
 (Gal.
 3:1) La iglesia de Colosas estaba enredada y sujeta a los rudimentos del mundo,
 ordenanzas (que perecen con el uso), mandamientos y doctrinas de hombres.
@@ -277,9 +277,9 @@ llamada Jezabel y que se hacía llamar profetisa,
 sedujera y diera a luz niños de apostasía. (Apoc.
 2:20,23) La iglesia de Sardis tenía nombre de estar viva
 pero estaba muerta y había manchado sus vestiduras (Apoc.
-3:2,4). La iglesia de Laodicea se veía a sí misma rica, enriquecida,
+3:2,4). La iglesia de Laodicea se veía a sí misma rica, enriquecida, y
 que no tenía necesidad de nada, pero era desventurada, miserable, pobre,
-ciega (el ojo se había desviado) y desnuda; sin oro, sin vestido, sin colirio.
+ciega (el ojo se había desviado) y desnuda; sin oro, sin vestido, sin colirio
 (Apoc.
 3:17-18). Finalmente,
 todos los gentiles fueron advertidos por Pablo en
@@ -297,7 +297,7 @@ El apóstol Juan mirando en el espíritu el estado futuro de las cosas,
 la vio extendida y cubriéndolo todo;
 "`todas las naciones han bebido del vino del furor de su fornicación`" (Apoc.
 18:3). El camino de la verdad había sido blasfemado hacía mucho (2 Ped.
-2:2) y la Roca Eterna que sólo se establece en la verdad había sido abandonada.
+2:2), y la Roca Eterna que sólo se establece en la verdad había sido abandonada.
 Todo se hizo como un mar,
 se levantó la bestia (que no podía levantarse mientras el poder
 de la verdad estuviera en pie) y sobre la bestia la mujer,
@@ -321,7 +321,7 @@ la "`bestia`" (que era manejada por la ramera) tenía poder sobre ellos;
 poder para hacerles guerra, poder para vencerlos.
 (Apoc.
 13:7) La "`bestia`" tenía poder sobre toda "`tribu, pueblo,
-lengua y nación`" en todas partes para vencer a los "`santos,`"
+lengua y nación`" en todas partes, para vencer a los "`santos,`"
 para suprimir la verdad de la que ellos eran movidos a dar testimonio,
 para establecer la adoración de la "`bestia`" y hacer
 que toda la tierra cayera delante de eso.
@@ -350,12 +350,12 @@ entonces se salieron de dicho estado y lo perdieron.
 Se podría describir con multitud de detalles la manera
 en que el estado del cristianismo se perdió,
 pero sería demasiado extenso y tedioso.
-Por lo tanto, puede que baste exponer unos pocos ejemplos importantes.
+Por tanto, puede que baste exponer unos pocos ejemplos importantes.
 
 === 1. La verdadera regla del cristianismo se perdió.
 
 La regla que dirige,
-guía y ordena al cristiano en toda su marcha fue apostatada y perdida.
+guía y ordena al cristiano en toda su marcha, fue apostatada y perdida.
 
 [.discourse-part]
 Pregunta: ¿Cuál es la regla^
@@ -365,36 +365,37 @@ por la que el cristiano tiene que dirigir y ordenar su curso?
 
 [.discourse-part]
 Respuesta: Ser cristiano es ser seguidor de Cristo, en consecuencia,
-se debe tener la misma regla para caminar que tuvo Cristo.
+se debe caminar en la misma regla que caminó Cristo.
 El cristiano proviene de Cristo y tiene la misma vida en él,
 por lo tanto necesita la misma regla.
 Cristo tenía la plenitud de vida y todos recibimos
 de Su plenitud una medida de dicha vida.
 "`Porque somos miembros de su cuerpo,
 de su carne y de sus huesos`" (Ef. 5:30). En efecto,
-nosotros salimos del mismo manantial de vida de donde Él salió,
+nosotros salimos del mismo manantial de vida de donde salío Él,
 "`Porque el que santifica y los que son santificados, de uno son todos;
 por lo cual no se avergüenza de llamarlos hermanos`" (Heb.
 2:11). ¿Cuál era Su regla?
-¿No era la plenitud de vida que recibió? Y ¿cuál es la regla de los que son santificados?
+¿No era la plenitud de vida que recibió? Y, ¿cuál es la regla de los que son santificados?
 ¿No es la medida de vida que recibieron?
 ¿No era la regla de Cristo la ley del Espíritu,
-la ley que el Espíritu escribió en Su corazón? Y
+la ley que el Espíritu escribió en Su corazón? Y,
 ¿no es la regla de los cristianos la ley del Espíritu,
 la ley que el Espíritu escribe en sus corazones?
 
 ¿Cómo fue hecho Cristo rey y sacerdote?
-¿Fue por la ley de un mandamiento carnal o por el poder de una vida eterna?
+¿Fue por la ley de un mandamiento carnal o por el poder de una vida indestructible?
 ¿Y cómo son hechos ellos reyes y sacerdotes de Dios?
 (Apoc.
-1:6). ¿Es por la ley de un mandamiento carnal o por el poder de la misma vida eterna?
+1:6). ¿Es por la ley de un mandamiento carnal,
+o por el poder de la misma vida indestructible?
 "`He aquí que vengo para hacer tu voluntad, Dios mío`', dijo Cristo,
 "`cuando entró al mundo`" (Heb.
 10:7,5) Pero ¿por cuál regla?
 ¿Por cuál ley?
 "`Tu ley está en medio de mi corazón`" (Sal.
 40:8). Y el Espíritu que la escribió ahí,
-es el mismo que escribe el nuevo pacto con todas sus leyes en el corazón de cada cristiano,
+es el mismo que escribe el nuevo pacto (con todas sus leyes) en el corazón de cada cristiano,
 desde el más pequeño hasta el más grande.
 (Heb.
 8:9,10) Sí, el Espíritu que habitaba en el corazón de Cristo,
@@ -408,7 +409,7 @@ Esta era la regla por la que Pablo caminaba,
 ¿Dónde está escrita la ley del pecado?
 ¿Dónde está escrita la ley de la muerte?
 ¿No está escrita en el corazón? ¿No debe ser escrita ahí también la ley
-de justicia y vida para que sea capaz de tratar con el pecado y la muerte?
+de justicia y vida, para que sea capaz de tratar con el pecado y la muerte?
 El Espíritu forma de nuevo el corazón, forma a Cristo en el corazón,
 engendra una nueva creación ahí que no puede pecar.
 ("`El que es nacido de Dios no peca.`") Esta es la regla de justicia,
@@ -417,7 +418,7 @@ la nueva creación o el Espíritu de vida en la nueva creación.
 ni la incircuncisión,
 sino una nueva creación. Y a todos los que anden conforme a esta regla,
 paz y misericordia sea a ellos`" (Gal.
-6:15-16). Note, esta es la regla:
+6:15-16). Noten, esta es la regla:
 La nueva creación que es engendrada en todo el que es nacido de Dios.
 "`Si alguno está en Cristo,
 nueva criatura es,`" y esta nueva creación tiene que ser su regla.
@@ -425,7 +426,7 @@ En la medida que cada hombre camine de acuerdo a esta regla,
 de acuerdo a la nueva creación,
 de acuerdo a la ley de luz y vida que el Espíritu continuamente sopla en la nueva creación,
 tiene paz.
-Pero si transgrede esto y no camina según el Espíritu sino según la carne,
+Pero si transgrede esto y no camina según el Espíritu, sino según la carne,
 camina fuera de la luz, fuera de la vida, fuera de la paz; camina en el mar,
 en la muerte, en la dificultad y en la condenación. Esta es, pues,
 la ley del hombre convertido: La nueva creación;
@@ -441,10 +442,10 @@ no necesitaban ningún otro maestro,
 ni en la verdad ni en el camino de vida (ver. 27). El "`Consolador`"
 renovaba sus corazones suficientemente y los llevaba a toda verdad.
 
-Escudriñen las epístolas de los apóstoles y los encontrarán testificando
+Escudriñen las epístolas de los apóstoles, y los encontrarán testificando
 que el Señor mandó Su Espíritu a los corazones de los cristianos.
 Encontrarán exhortaciones de no entristecer o apagar al Espíritu,
-sino de seguir según eran guiados.
+sino de seguir según fueran guiados.
 Ellos tenían que "`vivir en el Espíritu`" y "`caminar en el Espíritu.`"
 (Gal.
 5:25) El Espíritu tenía que caminar, vivir y producir Su propia vida y poder en ellos.
@@ -461,7 +462,7 @@ el conocimiento de la misma e instruirlos en ella.
 Pero ahora hay una ley interna, a mano,
 la inmediata luz del Espíritu de vida brillando directamente en el corazón.
 Los que conocen esta ley interior no necesitan hombre que les enseñe,
-tienen el Espíritu de profecía en ellos y enseñanzas vivas provenientes de Él,
+tienen el Espíritu de profecía en ellos y enseñanzas vivas provenientes de Él
 continuamente.
 Estos son hechos reyes y sacerdotes para Dios,
 tal como el pacto de la ley sólo pudo representar.
@@ -472,7 +473,7 @@ vive en esa sustancia y en quien esa sustancia vive.
 Su regla es la sustancia misma,
 en la que él vive y la que vive en él. Cristo es la sustancia,
 Él vive en el cristiano y el cristiano en Él. Cristo vive en él
-por Su Espíritu y él vive en Cristo por el mismo Espíritu.
+por Su Espíritu, y él vive en Cristo por el mismo Espíritu.
 Ahí vive y tiene comunión con el Padre y con el Hijo, en la luz en la que Ellos viven,
 y no mediante ninguna regla externa.
 (1 Juan 1:6-7)
@@ -519,7 +520,7 @@ sino que se aferran a la letra de las Escrituras y se oponen a la vida con la le
 Se mantienen a sí mismos alejados de la vida por
 medio de su sabiduría y conocimiento de la letra.
 De esta manera ponen las Escrituras en el lugar de
-Cristo y así ni honran a Cristo ni a las Escrituras.
+Cristo, y así ni honran a Cristo ni a las Escrituras.
 
 No habría sido honor para Juan el Bautista haber sido tomado como la Luz;
 el honor de Juan era apuntarla.
@@ -546,7 +547,7 @@ en el corazón y en la boca`" (Rom.
 10:8). Es la Palabra que está a la puerta del corazón
 y pide que la dejen entrar ("`He aquí,
 yo estoy a la puerta y llamo,`" Apoc.
-3:20). Cuando se le permite entrar habla en el corazón lo que tiene que ser oído y hecho.
+3:20). Cuando se le permite entrar, habla en el corazón lo que tiene que ser oído y hecho.
 Está cerca, está en el corazón y en la boca, ¿con qué fin?
 "`Para que ustedes puedan oírla y hacerla.`"
 La Palabra viva,
@@ -564,7 +565,7 @@ con la severidad de la cruz sobre sus propias naturalezas terrenales.
 De hecho, cuando la Palabra alcanza la naturaleza,
 la vida y el espíritu mismo en el interior,
 la vida carnal en el corazón no puede ser perdonada,
-ni puede ser rechazado tampoco lo tonto y lo débil (en opinión
+ni puede ser rechazado lo tonto y lo débil (en opinión
 del ojo sabio del hombre) que se levanta en su lugar,
 lo cual, cuando es recibido, es como una pequeña semilla,
 como la más pequeña de las semillas.
@@ -583,7 +584,7 @@ Entonces están reprobados, fuera de la fe.
 Cristo está en ustedes, ¿y no llevará Él las riendas y gobernar?
 La Palabra viva está en el corazón, ¿y no será el gobierno del corazón? El apóstol Juan,
 quien había visto, gustado, tocado y predicado la palabra de vida,
-¿refirió a los cristianos a sus epístolas, o cualquier otra parte de la escritura,
+¿refirió a los cristianos a sus epístolas, o a cualquier otra parte de la escritura,
 para que fueran su gobierno?
 No, él los dirigió a la unción como maestro suficiente.
 (1 Juan 2:27) "`El que cree en mí, como dice la Escritura,
@@ -597,7 +598,7 @@ si consiguen encontrarlo.
 Él que ha encontrado el reino en el interior, ¿debería mirar afuera,
 a palabras habladas acerca del reino para hallar las leyes del reino?
 ¿No se encuentran las leyes del reino en el reino?
-¿Está el reino en el corazón y las leyes del reino escritas afuera en un libro?
+¿Está el reino en el corazón y las leyes del reino escritas en un libro afuera?
 ¿No es el evangelio la ministración del Espíritu?
 Aquel que ha recibido al Espíritu, ¿regresará a la letra para ser guiado?
 El Espíritu vivo que da las Escrituras está presente,
@@ -636,16 +637,16 @@ la cual reúne y traslada al hombre de su propio espíritu al Espíritu de Crist
 Allí no hay confusión ni incertidumbre, sino orden, certidumbre y estabilidad.
 
 La luz del Espíritu de Dios es una regla segura e
-infalible y el ojo que la ve es un ojo seguro.
+infalible, y el ojo que la ve es un ojo seguro.
 El entendimiento humano de las Escrituras es incierto y falible.
-Él, al no tener el verdadero oído,
-recibe en su entendimiento incierto un conocimiento literal dudoso de las cosas,
+El hombre, al no tener el verdadero oído,
+recibe en su entendimiento incierto un conocimiento literal y dudoso de las cosas,
 y engaña su alma.
 De esta manera,
-se pierde en su propia mente errante e incierta en
+se pierde en su propia mente errante e incierta, en
 medio de su sabiduría y conocimiento de las Escrituras,
 y su alma es engañada por falta de una raíz verdadera y de un fundamento en él. Pero
-aquel que es llevado al verdadero Pastor y conoce Su voz no puede ser engañado,
+aquel que es llevado al verdadero Pastor y conoce Su voz, no puede ser engañado,
 puede leer las Escrituras a salvo y probar la verdadera
 dulzura de las palabras que salen de la vida.
 
@@ -677,7 +678,7 @@ con el que está fuera de la Verdad y que no los dejará entrar en ellas.
 Cuando no son capaces de alcanzar y comprender la verdad tal como es, entonces estudian,
 inventan e imaginan el significado.
 Moldean una semejanza, una similitud de la verdad lo más aproximada posible,
-y eso debe pasar como la verdad.
+y lo hacen pasar como la verdad.
 Luego honran y se inclinan ante ello como si fuera la voluntad de Dios,
 aunque no sea más que una semejanza de su propia
 invención y creación. Ellos no adoran a Dios,
@@ -685,11 +686,11 @@ ni honran las Escrituras, honran y adoran las obras de su propio cerebro.
 El hombre ha hecho una imagen,
 ha hecho un ídolo de cada escritura a la que le ha creado un significado,
 de cada escritura que no ha leído en la luz verdadera y viva del Espíritu eterno de Dios.
-El respeto y honor que le da a ese significado, no es respeto y honor dados a Dios,
+El respeto y honor que le da a ese significado, no es respeto y honor a Dios,
 sino a su propia imagen, a su propio ídolo.
 
 ¡Oh,
-muchos son tus ídolos cristianos de Inglaterra! ¡Cuán llenos están ustedes de imágenes,
+muchos son tus ídolos cristianos de Inglaterra! ¡Cuán llenos están de imágenes,
 ídolos y conceptos espirituales! ¡Han corrido de una idea a otra
 con la misma mente y espíritu con que comenzaron al principio!
 El fundidor de imágenes nunca ha sido descubierto
@@ -700,7 +701,7 @@ del Señor lo busque y revele Su justa ira contra él.
 Yo honro las Escrituras en mi corazón y mi alma,
 y anhelo leerlas con ojo puro y en la luz pura del Espíritu vivo de Dios.
 ¡Pero,
-qué el Señor me libre de leer una línea de ellas en mi propia voluntad
+qué el Señor me libre de leer una línea de ellas en mi propia voluntad,
 o de interpretar alguna parte de ellas de acuerdo a mi propio entendimiento!
 Anhelo leerlas sólo en la medida que sea guiado, conducido e iluminado por Él,
 en la voluntad y entendimiento que vienen de Él. En Su luz, toda escritura,
@@ -725,7 +726,7 @@ cualquier otra adoración es adoración falsa, y cualquier otro adorador es ador
 ¿No rechazó Dios el sacrificio de Caín antes?
 ¿Puede Él aceptar ahora cualquier sacrificio o adoración que se
 ofrezca en la naturaleza de Caín? El que adora sin el Espíritu,
-adora en esa naturaleza, pero el que adora correctamente,
+adora en esa naturaleza, pero el que quiera adorar correctamente,
 debe tener su naturaleza cambiada y adorar en esa fe, en esa vida, en esa naturaleza,
 en ese Espíritu, mediante el que y donde el tal es cambiado.
 Porque no estar en esto o no permanecer en esto,
@@ -734,7 +735,7 @@ hace que sea imposible agradar a Dios en algo.
 El que es verdadero adorador debe guardar la ley de la fe,
 la ley del Espíritu de vida en él;
 la ley que él recibe continuamente del Espíritu de vida mediante la fe fresca.
-Él debe oír y observar la voz de la Palabra viva
+Debe oír y atender la voz de la Palabra viva
 en toda su adoración y debe adorar en la presencia,
 poder y guía de esa Palabra.
 
@@ -752,7 +753,8 @@ footnote:[Adoración de la voluntad es un término que se usa para
 referirse a cualquier forma de adoración que brota de los recursos
 del hombre y que está de acuerdo a la voluntad del hombre.]
 Es adoración de acuerdo a su propio entendimiento y naturaleza,
-ambas cosas deben ser crucificadas y no ser seguidas en ninguna forma bajo el evangelio.
+ambas cosas deben ser crucificadas,
+y no deben ser seguidas en ninguna forma bajo el evangelio.
 "`Nosotros somos la circuncisión,
 los que adoramos a Dios en Espíritu,`" (estos son los verdaderos adoradores,
 "`la circuncisión,`" y esta es la verdadera adoración, "`en Espíritu`"),
@@ -766,7 +768,7 @@ La adoración del Espíritu es en la voluntad y tiempo
 del Espíritu y es continuada por Su luz y poder.
 Este poder mantiene abajo la parte intelectual y emotiva del hombre,
 en la que todo el mundo adora, ofrece sacrificios inaceptables,
-ofrendas cojas y ciegas que el alma de Dios odia.
+y ofrendas cojas y ciegas que el alma de Dios odia.
 
 Ahora bien, la adoración no se halla en la voluntad ni en el tiempo del hombre,
 sino en lo que permanece para siempre, esta es adoración continua.
@@ -789,8 +791,8 @@ donde Dios obra todo en él en Su tiempo y de acuerdo a Su propio beneplácito.
 "`Pero los que hemos creído entramos en el reposo`" (Heb.
 4:3). Y "`el que ha entrado en su reposo, también ha reposado de sus obras,
 como Dios de las suyas`" (ver. 10). El que tiene la menor muestra de fe
-conoce una medida de reposo al encontrar la vida obrando en él. Su alma
-es diariamente dirigida más y más en la vida mediante la obra de la vida,
+experimenta una medida de reposo al encontrar la vida obrando en él. Su alma
+es diariamente dirigida más y más en la vida, mediante la obra de la vida,
 y el pesado yugo de su propio esfuerzo en pos de la vida es quitado de sus hombros.
 Ahora esto es la verdad, la vida,
 el día de reposo y la adoración del alma que es guiada
@@ -804,11 +806,11 @@ Respuesta: Entre los católicos es una adoración muy desagradable;
 una adoración más carnal que lo que alguna vez fue
 la adoración de la ley del antiguo pacto.
 Porque aunque la ley en su naturaleza era externa y carnal,
-aún así era enseñada y prescrita por la sabiduría
+aun así era enseñada y prescrita por la sabiduría
 de Dios y provechosa en su lugar y para su fin.
 Pero la adoración entre los católicos fue inventada por una sabiduría
 corrupta y establecida en la voluntad corrupta del hombre,
-no tiene verdadero provecho, todo lo contrario, mantiene alejada la vida,
+y no tiene verdadero provecho, todo lo contrario, mantiene alejada la vida,
 el poder y al Espíritu mediante prácticas de la carne
 que alimentan y complacen la naturaleza carnal.
 Miren sus días consagrados a los santos, sus horas canónicas de oración,
@@ -869,8 +871,8 @@ si es que alguna vez van a conocer el edificio de Dios y la verdadera fe.
 El amor inocente, el que no guarda rencor, no desea el mal,
 ni mucho menos le hace mal a alguien; el amor que es sufrido, amable, manso,
 humilde y no busca lo suyo,
-sino el bien de otros... ese amor se perdió. El amor no fingido fue desterrado
-y el amor fingido del que procede la enemistad y violencia ha tomado su lugar.
+sino el bien de otros... ese amor se perdió. El amor no fingido fue desterrado,
+y el amor fingido del que proceden la enemistad y la violencia ha tomado su lugar.
 El verdadero amor ama al enemigo y no puede devolver enemistad por enemistad,
 más bien busca el bien de aquellos que lo odian.
 Pero el amor falsificado puede perseguir y odiar al que él llama amigo, sí,
@@ -883,8 +885,8 @@ Sin embargo, el amor que está entre los cristianos hoy más bien tiende a quita
 ¿Cómo es el amor entre los católicos?
 Miren sus inquisiciones, sus iras, sus quemas en la hoguera, etc.
 ¿Cómo es el amor en Nueva Inglaterra?
-Es un amor que encarcelará o desterrará a su hermano si difiere aunque
-sea un poco en el juicio o práctica de la adoración. En efecto,
+Es un amor que encarcelará o desterrará a su hermano si difiere, aunque
+sea un poco, en el juicio o práctica de la adoración. En efecto,
 ellos azotan, queman manos, cortan orejas,
 al igual que los obispos de la vieja Inglaterra.
 Si alguien les hubiera dicho, cuando huyeron de la persecución de los obispos,
@@ -912,8 +914,8 @@ No, si el verdadero amor de Dios estuviera en ellos esta enemistad no podría ex
 ni los malos frutos brotar.
 Estos no han visto al Padre ni al Hijo.
 
-"`Por esto conocerán todos que sois mis discípulos, si se aman los unos a los otros.`"
-Y por esto podrán conocer todos los hombres,
+"`Por esto conocerán todos que sois mis discípulos, si se aman los unos a los otros`"
+(Juan 13:35). Y por esto podrán conocer todos los hombres,
 que los que ahora pasan por cristianos no son discípulos de Cristo,
 porque _no_ se aman unos a otros.
 No están en la unidad de la luz y por eso no pueden amarse unos a otros.
@@ -948,8 +950,8 @@ Y al estar sin ancla es llevado por las olas del mar.
 
 El verdadero gozo está en el Espíritu, en lo que se siente,
 se disfruta y se espera ahí. Pero el gozo del cristiano común está
-en las cosas que amasa y comprende en su entendimiento,
-o en destellos de emoción que siente en la parte afectiva provenientes del fuego
+en las cosas que acumula y comprende en su entendimiento,
+o en destellos de emoción que siente en la parte afectiva, provenientes del fuego
 y de las chispas de su propia leña donde encuentra su calidez y confort.
 
 La verdadera paz se encuentra en la reconciliación
@@ -984,7 +986,7 @@ pero en la apostasía los hombres no han conocido a Dios ni a Satanás,
 no han conocido la luz ni las tinieblas.
 En la apostasía los hombres han errado tomando uno por el otro,
 adorando al diablo en lugar de a Dios (Apoc.
-13:4) y siguiendo los conceptos oscuros de sus propias mentes,
+13:4) y siguiendo los conceptos oscuros de sus propias mentes
 con respecto a las Escrituras y llamándolos luz.
 
 La regeneración es el cambio de hombre que ocurre
@@ -1039,7 +1041,7 @@ La semilla de la vida, el reino de los cielos,
 es algo santo y según crece y se extiende purga la vieja levadura y hace nueva la masa.
 Pero ahora, los cristianos que han crecido en la apostasía,
 desconocen esta Semilla y no disciernen esta Levadura,
-es por eso que su santidad consiste en conformarse a reglas de las Escrituras
+por lo que su santidad consiste en conformarse a reglas de las Escrituras
 que reciben en el corazón y en el entendimiento viejo.
 ¡Cuánto ruido ha hecho la santidad del hombre en
 el mundo a lo largo de la noche de la apostasía!
@@ -1057,7 +1059,7 @@ el hombre fuerte aún está en el corazón,
 mantiene al alma en la muerte y produce frutos de muerte diariamente.
 
 Anteriormente,
-(el primer día de la irrupción del poder de Dios)
+(el primer día en que el poder de Dios irrumpió)
 los cristianos tenían a Cristo en ellos,
 a la Palabra viva.
 Ellos le abrieron su corazón, lo recibieron,
@@ -1086,10 +1088,10 @@ Sión. Son piedras vivas edificados sobre ella en Jerusalén la ciudad santa.
 2:5-6; Heb.
 12:22) Esta es la verdadera iglesia.
 
-Todo el que cree en Cristo es una piedra viva y como piedra viva,
+Todo el que cree en Cristo es una piedra viva; y como piedra viva,
 está colocado sobre el fundamento vivo, por tanto,
 es una parte del edificio en el templo del Dios vivo.
-Sí, al ser limpiados su cuerpo y su espíritu,
+Sí, al ser limpiado su cuerpo y su espíritu,
 él mismo es un templo en el que Dios habita, aparece y es adorado.
 La reunión de algunas de estas piedras,
 en cualquier momento y en la vida y nombre de Cristo, es un templo más grande,
@@ -1138,7 +1140,7 @@ creados en sus propias voluntades, según sus propias invenciones.
 Por la habilidad e idiomas humanos,^
 footnote:[Es decir, los idiomas originales de la Biblia, el griego y el hebreo.]
 lo cual ha sido de alta estima en la iglesia,
-ya que el idioma del Espíritu de Dios y Su habilidad perdieron.
+ya que el idioma del Espíritu de Dios y Su habilidad se perdieron.
 Dios no escoge aquí quiénes serán Sus ministros,
 cualquier hombre puede designar a su hijo para ser ministro,
 si lo enseña a aprender y lo envía a la universidad.
@@ -1166,8 +1168,8 @@ justicia, santificación ni redención? ¿Ni verdadera iglesia, ni verdadero min
 Respuesta: La adoración, la fe, el amor, la esperanza, el gozo, la paz,
 el arrepentimiento, la conversión, la regeneración, etc.,
 que han sido declaradas en las naciones como la verdad,
-la iglesia y los ministros se han corrompido,
-nunca han recuperado su estado verdadero y original hasta el día presente.
+la iglesia y los ministros, todo esto se ha corrompido,
+nunca ha recuperado su estado verdadero y original hasta el día presente.
 Han habido cambios de una cosa u otra, pero no se ha conocido una verdadera restauración.
 
 Sin embargo,
