--- a/escritos-volumen-1/updated/03-capitulo-2.adoc
+++ b/escritos-volumen-1/updated/03-capitulo-2.adoc
@@ -65,7 +65,7 @@ para buscar consuelo en las vanidades terrenales) no será fácilmente recobrado
 El Señor fue bondadoso conmigo al quebrantarme en mi religión,
 y visitarme con la dulce y preciosa luz de Su propio Espíritu,
 pero yo no la conocía. Tengo que reconocer que yo sentía Su poder
-sobre mí, y que pude haberlo reconocido si le hubiera permitido que purificara
+sobre mí, y que pude haberlo entendido en verdad si le hubiera permitido que purificara
 mi corazón y me engendrara a la imagen de Dios,
 pero demandé que ese poder apareciera mediante una
 demostración frente a mi razón y mi sabiduría terrenal,
